# rust_ebpf_agent

./: Cargo.toml  README.md  activity.json
edr-agent/: Cargo.toml  build.rs
edr-agent-common/: Cargo.toml
edr-agent-common/src/: lib.rs
edr-agent-ebpf/: Cargo.toml
edr-agent-ebpf/src/: main.rs  vmlinux.rs
edr-agent/src/: main.rs
