[workspace]
resolver = "2"
members = [
    "edr-agent",
    "edr-agent-common",
    "edr-agent-ebpf",
]
default-members = ["edr-agent", "edr-agent-common"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
# --- STABLE AYA VERSIONS ---
aya = { version = "0.13", default-features = false }
aya-ebpf = { version = "0.1", default-features = false }      
aya-log = { version = "0.2", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }  
aya-build = { version = "0.1" }

# --- UTILS ---
anyhow = { version = "1", default-features = false }
clap = { version = "4", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
tokio = { version = "1", default-features = false }
which = { version = "6", default-features = false }
bytes = "1.5"
cargo_metadata = { version = "0.18", default-features = false }

# --- PROFILE SETTINGS ---
[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.dev]
panic = "abort"