[package]
name = "edr-agent"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Internal
edr-agent-common = { path = "../edr-agent-common", features = ["user"] }

# Aya (Stable uses 'async_tokio')
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }

# Utils
anyhow = { workspace = true, default-features = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }

[[bin]]
name = "edr-agent"
path = "src/main.rs"